fix: fix vertical prop alignment of form components inside #form-row

--- a/packages/dnb-ui-lib/src/components/input/style/_input.scss
+++ b/packages/dnb-ui-lib/src/components/input/style/_input.scss
@@ -244,13 +244,10 @@
   }
 
   &--vertical {
+    display: flex;
     flex-direction: column;
     align-items: flex-start;
-    // line-height: var(--line-height-basis);
   }
-  // &--vertical &__row {
-  //   align-items: flex-start;
-  // }
 
   // make the input full width
   &--stretch {
